WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130852
Confirm composition in resignFirstResponder, don't cancel it
https://bugs.webkit.org/show_bug.cgi?id=130852
Summary
Confirm composition in resignFirstResponder, don't cancel it
Alexey Proskuryakov
Reported
2014-03-27 12:14:45 PDT
We currently have code in -[WKView resignFirstResponder] that cancels the current composition. There are some problems with it: 1. It's a sync IPC call, which I want to eliminate. 2. It doesn't actually work most of the time, because editorState tracking is broken, and we often think that there is no composition even when there is one. 3. Modern AppKit behavior appears to be that it confirms a composition when switching between text views within a window. Or maybe it's flaky too, but one way or another, confirming seems like a reasonable behavior.
Attachments
proposed patch
(1.24 KB, patch)
2014-03-27 12:16 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-03-27 12:16:26 PDT
Created
attachment 227962
[details]
proposed patch The same probably makes sense for old code path too, but I don't want to touch it unless absolutely necessary.
WebKit Commit Bot
Comment 2
2014-03-27 17:36:41 PDT
Comment on
attachment 227962
[details]
proposed patch Clearing flags on attachment: 227962 Committed
r166388
: <
http://trac.webkit.org/changeset/166388
>
WebKit Commit Bot
Comment 3
2014-03-27 17:36:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug