Confirm composition in resignFirstResponder, don't cancel it https://bugs.webkit.org/show_bug.cgi?id=130852

Reviewed by Darin Adler.

* UIProcess/API/mac/WKView.mm: (-[WKView resignFirstResponder]):


Canonical link: https://commits.webkit.org/148904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166388 268f45cc-cd09-0410-ab3c-d52691b4dbfc